// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question component loads and displays Question component 1`] = `
<div
  className="question"
>
  <div
    className="questionTitle"
  >
    <p>
      Q: 
      Why is this product cheaper here than other sites?
    </p>
    <div
      className="questionLinks"
    >
      <p>
        Helpful? 
        <a>
          Yes
        </a>
         (
        4
        ) | 
        <a>
          Add Answer
        </a>
      </p>
    </div>
  </div>
  <div
    className="answerList"
  >
    <p>
      A: INSERT ANSWER LIST COMPONENT HERE
    </p>
  </div>
</div>
`;

exports[`Questions widget component loads and displays questions widget component 1`] = `
<div
  className="questionsWidget"
>
  <h6>
    QUESTIONS & ANSWERS
  </h6>
  <div>
    <input
      id="questionsSearchBar"
      onChange={[Function]}
      placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
      type="search"
    />
  </div>
  <div
    className="questionList"
  >
    <div
      className="question"
    >
      <div
        className="questionTitle"
      >
        <p>
          Q: 
          Why is this product cheaper here than other sites?
        </p>
        <div
          className="questionLinks"
        >
          <p>
            Helpful? 
            <a>
              Yes
            </a>
             (
            4
            ) | 
            <a>
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
        className="answerList"
      >
        <p>
          A: INSERT ANSWER LIST COMPONENT HERE
        </p>
      </div>
    </div>
    <div
      className="question"
    >
      <div
        className="questionTitle"
      >
        <p>
          Q: 
          How long does it last?
        </p>
        <div
          className="questionLinks"
        >
          <p>
            Helpful? 
            <a>
              Yes
            </a>
             (
            2
            ) | 
            <a>
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
        className="answerList"
      >
        <p>
          A: INSERT ANSWER LIST COMPONENT HERE
        </p>
      </div>
    </div>
  </div>
  <div
    className="questionButtons"
  >
    <p>
      REPLACE WITH MOREQUESTIONS COMPONENT
    </p>
    <p>
      REPLACE WITH ADDQUESTIONS COMPONENT
    </p>
  </div>
</div>
`;

exports[`QuestionsList component loads and displays QuestionsList component 1`] = `null`;

exports[`SearchBar component loads and displays SearcbBar component 1`] = `
<div>
  <input
    id="questionsSearchBar"
    placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
    type="search"
  />
</div>
`;
